Revert "fix local and replace present to flatpack (#650)"
This reverts commit cbad8ef64f0d7e6ad0dd27ea71e5e4b1b2544c49.

--- a/Resources/Prototypes/_Backmen/Entities/Supermatter/supermatter.yml
+++ b/Resources/Prototypes/_Backmen/Entities/Supermatter/supermatter.yml
@@ -7,7 +7,7 @@
   components:
   - type: Sprite
     layers:
-    - state: supermatter
+    - state: ame-part
   - type: Flatpack
     entity: supermatter
   - type: StaticPrice
