--- a/Resources/Prototypes/Catalog/Fills/Crates/fun.yml
+++ b/Resources/Prototypes/Catalog/Fills/Crates/fun.yml
@@ -34,6 +34,7 @@
       - id: PlushieSheyla
       - id: PlushieEsmira
       - id: PlushieSakka
+      - id: PlushieGrapel
 
 - type: entity
   id: CrateFunLizardPlushieBulk
