--- a/Resources/Prototypes/_Evin/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/_Evin/Entities/Objects/Fun/toys.yml
@@ -160,3 +160,14 @@
   - type: EmitSoundOnTrigger
     sound:
       path: /Audio/Items/Toys/weh.ogg
+
+- type: entity
+  parent: PlushieMoth #Drugoy parent
+  id: PlushieGrapel
+  name: плюшевый Забытый Исследователь
+  description:  Один из Ниан, точнее его плюшевая версия. Довольно пыльная, но всё так же в хорошем качестве.
+  suffix: Спонсор
+  components:
+  - type: Sprite
+    sprite: _Evin/Objects/Fun/toys.rsi
+    state: sponsor_grapel
