станзащита, гамма обр, фикс сейм, изменения звука войны, замена двухклинкового меча на обычный у штурм киборга, добавление ролей киборга меда и инжа.

--- a/Resources/Prototypes/Entities/Objects/Specific/Robotics/borg_modules.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Robotics/borg_modules.yml
@@ -536,7 +536,7 @@
       - state: icon-syndicate
     - type: ItemBorgModule
       items:
-      - EnergySwordDouble
+      - EnergySword
       - PinpointerSyndicateNuclear
 
 - type: entity
