--- a/Resources/Prototypes/Damage/types.yml
+++ b/Resources/Prototypes/Damage/types.yml
@@ -84,3 +84,12 @@
   name: damage-type-structural
   armorCoefficientPrice: 1
   armorFlatPrice: 1
+
+
+# Damage represents stamina of a mob.
+# Used by certain armor to counter stun weaponry.
+- type: damageType
+  id: Stun
+  name: damage-type-stun
+  armorCoefficientPrice: 5
+  armorFlatPrice: 20
