--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
@@ -19,6 +19,7 @@
         Slash: 0.70
         Piercing: 0.70 #Can save you, but bullets will still hurt. Will take about 10 shots from a Viper before critting, as opposed to 7 while unarmored and 16~ with a bulletproof vest.
         Heat: 0.80
+        Stun: 0.95
   - type: ExplosionResistance
     damageCoefficient: 0.90
 
@@ -53,6 +54,7 @@
         Piercing: 0.7
         Heat: 0.9
         Caustic: 0.9
+        Stun: 0.9
   - type: ExplosionResistance
     damageCoefficient: 0.9
   - type: GroupExamine
@@ -74,6 +76,7 @@
         Slash: 0.9
         Piercing: 0.4
         Heat: 0.9
+        Stun: 0.85
   - type: ExplosionResistance
     damageCoefficient: 0.80
 
@@ -138,6 +141,7 @@
         Heat: 0.5
         Radiation: 0
         Caustic: 0.75
+        Stun: 0.7
   - type: GroupExamine
   - type: ClothingRequiredStepTriggerImmune
     slots: WITHOUT_POCKET
@@ -204,6 +208,7 @@
         Piercing: 0.6
         Heat: 0.5
         Caustic: 0.9
+        Stun: 0.8
   - type: ClothingSpeedModifier
     walkModifier: 1.0
     sprintModifier: 1.0
