--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
@@ -234,6 +234,7 @@
         Blunt: 0.8
         Slash: 0.8
         Piercing: 0.7
+        Stun: 0.8
   - type: ClothingSpeedModifier
     walkModifier: 0.65
     sprintModifier: 0.65
@@ -264,6 +265,7 @@
         Slash: 0.6
         Piercing: 0.6
         Caustic: 0.7
+        Stun: 0.7
   - type: ClothingSpeedModifier
     walkModifier: 0.7
     sprintModifier: 0.7
@@ -296,6 +298,7 @@
         Heat: 0.5
         Radiation: 0.5
         Caustic: 0.6
+        Stun: 0.9
   - type: ClothingSpeedModifier
     walkModifier: 0.8
     sprintModifier: 0.8
@@ -428,6 +431,7 @@
         Piercing: 0.5
         Radiation: 0.5
         Caustic: 0.6
+        Stun: 0.7
   - type: ClothingSpeedModifier
     walkModifier: 0.8
     sprintModifier: 0.8
@@ -494,6 +498,7 @@
         Heat: 0.5
         Radiation: 0.5
         Caustic: 0.5
+        Stun: 0.5
   - type: ClothingSpeedModifier
     walkModifier: 0.9
     sprintModifier: 0.9
@@ -553,6 +558,7 @@
         Heat: 0.2
         Radiation: 0.01
         Caustic: 0.5
+        Stun: 0.5
   - type: Item
     size: Huge
   - type: ClothingSpeedModifier
@@ -587,6 +593,7 @@
         Heat: 0.5
         Radiation: 0.25
         Caustic: 0.4
+        Stun: 0.5
   - type: ClothingSpeedModifier
     walkModifier: 1.0
     sprintModifier: 1.0
@@ -619,6 +626,7 @@
         Heat: 0.2
         Radiation: 0.2
         Caustic: 0.2
+        Stun: 0.4
   - type: ClothingSpeedModifier
     walkModifier: 0.9
     sprintModifier: 0.65
@@ -651,6 +659,7 @@
         Heat: 0.25
         Radiation: 0.25
         Caustic: 0.75
+        Stun: 0.7
   - type: ClothingSpeedModifier
     walkModifier: 0.8
     sprintModifier: 0.8
@@ -869,6 +878,7 @@
         Heat: 0.1
         Radiation: 0.1
         Caustic: 0.1
+        Stun: 0.1
   - type: ClothingSpeedModifier
     walkModifier: 1.0
     sprintModifier: 1.0
@@ -905,6 +915,7 @@
         Shock: 0.1
         Radiation: 0.1
         Caustic: 0.1
+        Stun: 0.6
   - type: ClothingSpeedModifier
     walkModifier: 1.0
     sprintModifier: 1.0
@@ -936,6 +947,7 @@
         Slash: 0.9
         Piercing: 0.9
         Caustic: 0.8
+        Stun: 0.9
   - type: ClothingSpeedModifier
     walkModifier: 0.9
     sprintModifier: 0.9
