--- a/Resources/manifest.yml
+++ b/Resources/manifest.yml
@@ -1,5 +1,5 @@
-defaultWindowTitle: Space Station 14 - Evin Station [RU] [LRP]
-windowIconSet: /Textures/Logo/icon-ru # Corvax-Theme
-splashLogo: /Textures/Logo/logo-ru.png # Corvax-Theme
+defaultWindowTitle: Evin Odyssey - Space Station 14 [RU] [LRP]
+windowIconSet: /Textures/Logo/icon-ru # Evin-Theme
+splashLogo: /Textures/Logo/logo-ru.png # Evin-Theme
 
 # PJB PLEASE
