--- a/Resources/Prototypes/_Evin/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/_Evin/Catalog/Fills/Lockers/heads.yml
@@ -1,7 +1,6 @@
 ﻿- type: entity
   id: LockerDSOLeader
-  suffix: ДСО, лидер
-  name: Шкаф ДСО лидер
+  name: шкафчик лидера обр
   parent: LockerCaptain
   components:
   - type: StorageFill
@@ -20,8 +19,7 @@
 
 - type: entity
   id: LockerDSOsec
-  suffix: ДСО, Офицер
-  name: Шкаф ДСО офицер
+  name: шкафчик офицера обр
   parent: LockerCaptain
   components:
   - type: StorageFill
@@ -39,8 +37,7 @@
 
 - type: entity
   id: LockerDSOeng
-  suffix: ДСО, инженер
-  name: Шкаф ДСО инженер
+  name: шкафчик инженера обр
   parent: LockerCaptain
   components:
   - type: StorageFill
@@ -59,8 +56,7 @@
 
 - type: entity
   id: LockerDSOmedical
-  suffix: ДСО, медик
-  name: Шкаф ДСО медик
+  name: шкафчик медика обр
   parent: LockerCaptain
   components:
   - type: StorageFill
