--- a/Resources/Prototypes/_Evin/Entities/Player/silicon.yml
+++ b/Resources/Prototypes/_Evin/Entities/Player/silicon.yml
@@ -1,6 +1,6 @@
 - type: entity
   id: PlayerBorgMedical
-  name: Медицинский киборг
+  name: медицинский киборг
   parent: BorgChassisMedical
   suffix: Модули
   components:
@@ -22,7 +22,7 @@
 - type: entity
   id: PlayerBorgEngineer
   parent: BorgChassisEngineer
-  name: Инженерный киборг
+  name: инженерный киборг
   suffix: Модули
   components:
   - type: ContainerFill
