--- a/Resources/Prototypes/_Evin/Maps/evincluster.yml
+++ b/Resources/Prototypes/_Evin/Maps/evincluster.yml
@@ -62,4 +62,5 @@
             Clown: [ 1, 1 ]
             Mime: [ 1, 1 ]
             Musician: [ 1, 1 ]
-
+            Borgeng: [ 1, 1 ]
+            Borgmed: [ 1, 1 ]
