--- a/Resources/Prototypes/_Evin/Maps/evincore.yml
+++ b/Resources/Prototypes/_Evin/Maps/evincore.yml
@@ -67,3 +67,5 @@
             Musician: [ 1, 1 ]
             Boxer: [ 2, 2 ]
             Reporter: [ 2, 2 ]
+            Borgeng: [ 1, 1 ]
+            Borgmed: [ 1, 1 ]
