--- a/Resources/Prototypes/_Evin/Maps/evinorigin.yml
+++ b/Resources/Prototypes/_Evin/Maps/evinorigin.yml
@@ -65,4 +65,5 @@
             Musician: [ 2, 2 ]
             Boxer: [ 1, 1 ]
             Reporter: [ 1, 1 ]
-
+            Borgeng: [ 1, 1 ]
+            Borgmed: [ 1, 1 ]
