--- a/Resources/Prototypes/_Evin/Maps/evinpacked.yml
+++ b/Resources/Prototypes/_Evin/Maps/evinpacked.yml
@@ -60,3 +60,5 @@
             Mime: [ 1, 1 ]
             Musician: [ 1, 1 ]
             Borg: [ 1 , 1 ]
+            Borgeng: [ 1, 1 ]
+            Borgmed: [ 1, 1 ]
