--- a/Resources/Prototypes/_Evin/Maps/evinbagel.yml
+++ b/Resources/Prototypes/_Evin/Maps/evinbagel.yml
@@ -64,3 +64,5 @@
             Mime: [ 1, 1 ]
             Musician: [ 1, 1 ]
             Reporter: [ 2, 2 ]
+            Borgeng: [ 1, 1 ]
+            Borgmed: [ 1, 1 ]
