--- a/Resources/Prototypes/_Evin/Maps/evinbox.yml
+++ b/Resources/Prototypes/_Evin/Maps/evinbox.yml
@@ -63,4 +63,5 @@
             Clown: [ 1, 1 ]
             Mime: [ 1, 1 ]
             Musician: [ 1, 1 ]
-
+            Borgeng: [ 1, 1 ]
+            Borgmed: [ 1, 1 ]
