--- a/Resources/Prototypes/_Evin/Maps/evindelta.yml
+++ b/Resources/Prototypes/_Evin/Maps/evindelta.yml
@@ -62,3 +62,5 @@
             Psychologist: [ 1, 1 ]
             Detective: [ 1, 1 ]
             Paramedic: [ 1, 1 ]
+            Borgeng: [ 1, 1 ]
+            Borgmed: [ 1, 1 ]
