--- a/Resources/Prototypes/_Evin/Maps/evinhonksilly.yml
+++ b/Resources/Prototypes/_Evin/Maps/evinhonksilly.yml
@@ -94,3 +94,5 @@
             Quartermaster: [ 1, 1 ]
             SalvageSpecialist: [ 3, 3 ]
             CargoTechnician: [ 3, 3 ]
+            Borgeng: [ 1, 1 ]
+            Borgmed: [ 1, 1 ]
