--- a/Resources/Prototypes/_Evin/Maps/evinomega.yml
+++ b/Resources/Prototypes/_Evin/Maps/evinomega.yml
@@ -62,3 +62,5 @@
             Mime: [ 1, 1 ]
             Musician: [ 1, 1 ]
             Borg: [ 2, 2 ]
+            Borgeng: [ 1, 1 ]
+            Borgmed: [ 1, 1 ]
