--- a/Resources/Prototypes/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/Roles/Jobs/departments.yml
@@ -83,9 +83,10 @@
   - HeadOfSecurity
   - SecurityCadet
   - SecurityOfficer
-  - Pilot # Corvax-Pilot
+  - Pilot
   - Detective
   - Warden
+  - Brigmedic
 
 - type: department
   id: Science
