--- a/Resources/Prototypes/_Evin/Maps/evinatlas.yml
+++ b/Resources/Prototypes/_Evin/Maps/evinatlas.yml
@@ -49,6 +49,7 @@
             SecurityOfficer: [ 3, 3 ]
             SecurityCadet: [ 1, 3 ]
             Detective: [ 1, 1 ]
+            Brigmedic: [ 1, 1 ]
             #supply
             Quartermaster: [ 1, 1 ]
             SalvageSpecialist: [ 2, 2 ]
