--- a/Resources/Prototypes/_Evin/Maps/evinbagel.yml
+++ b/Resources/Prototypes/_Evin/Maps/evinbagel.yml
@@ -53,6 +53,7 @@
             SecurityOfficer: [ 4, 4 ]
             Detective: [ 1, 1 ]
             SecurityCadet: [ 6, 6 ]
+            Brigmedic: [ 1, 1 ]
             #Lawyer: [ 2, 2 ] # Corvax-IAA
             #supply
             Quartermaster: [ 1, 1 ]
