--- a/Resources/Prototypes/_Evin/Maps/evinsilly.yml
+++ b/Resources/Prototypes/_Evin/Maps/evinsilly.yml
@@ -90,6 +90,7 @@
             Warden: [ 1, 1 ]
             Detective: [ 1, 1 ]
             SecurityCadet: [ 2, 2 ]
+            Brigmedic: [ 1, 1 ]
             # cargo
             Quartermaster: [ 1, 1 ]
             SalvageSpecialist: [ 3, 3 ]
