удаление всех значений в C:\spase\space-evin-14\Resources\Prototypes\_Evin\Maps

--- a/Resources/Prototypes/StatusEffects/job.yml
+++ b/Resources/Prototypes/StatusEffects/job.yml
@@ -171,7 +171,7 @@
   id: JobIconClown
   icon:
     sprite: /Textures/Interface/Misc/job_icons.rsi
-    state: Clown
+    statgge: Clown
 
 - type: statusIcon
   parent: JobIcon
