--- a/Resources/Prototypes/Catalog/Fills/Crates/security.yml
+++ b/Resources/Prototypes/Catalog/Fills/Crates/security.yml
@@ -56,6 +56,8 @@
         amount: 2
       - id: RiotShield
         amount: 2
+      - id: ClothingOuterArmorReflective  #evin
+        amount: 2
 #      - SecGasmask
 
 - type: entity
