--- a/Resources/Prototypes/tags.yml
+++ b/Resources/Prototypes/tags.yml
@@ -1,6 +1,12 @@
 # PUT YOUR TAGS IN ALPHABETICAL ORDER
 
 - type: Tag
+  id: CartridgeSHAK12  # icheburek Evin
+
+- type: Tag
+  id: SpeedLoaderSHAK # icheburek Evin
+
+- type: Tag
   id: AirAlarm
 
 - type: Tag
