--- a/Resources/Prototypes/Tiles/floors.yml
+++ b/Resources/Prototypes/Tiles/floors.yml
@@ -201,7 +201,7 @@
     collection: FootstepHull
   itemDrop: FloorTileItemBrassFilled
   heatCapacity: 10000
-  
+
 - type: tile
   id: FloorBrassReebe
   name: tiles-brass-floor-reebe
@@ -1933,3 +1933,43 @@
     collection: BarestepWood
   itemDrop: FloorTileItemWoodLarge
   heatCapacity: 10000
+
+#Evin
+- type: tile
+  id: FloorWhited
+  name: whited
+  sprite: /Textures/Tiles/whited.png
+  baseTurf: Plating
+  isSubfloor: true
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepHull
+  itemDrop: FloorTileItemReinforced
+  heatCapacity: 100000
+  indestructible: true
+
+- type: tile
+  id: FloorBlack
+  name: black
+  sprite: /Textures/Tiles/black.png
+  baseTurf: Plating
+  isSubfloor: true
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepHull
+  itemDrop: FloorTileItemReinforced
+  heatCapacity: 100000
+  indestructible: true
+
+- type: tile
+  id: FloorTransparent
+  name: whited
+  sprite: /Textures/Tiles/transparent.png
+  baseTurf: Plating
+  isSubfloor: true
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepHull
+  itemDrop: FloorTileItemReinforced
+  heatCapacity: 100000
+  indestructible: true
