--- a/Resources/Prototypes/SoundCollections/NukeMusic.yml
+++ b/Resources/Prototypes/SoundCollections/NukeMusic.yml
@@ -1,7 +1,8 @@
 ﻿- type: soundCollection
   id: NukeMusic
   files:
-    - /Audio/StationEvents/running_out.ogg
-    - /Audio/StationEvents/countdown.ogg
-    - /Audio/StationEvents/clearly_nuclear.ogg
-    - /Audio/Corvax/StationEvents/level.ogg # Corvax-NukeMusic
+    - /Audio/Evin/StationEvents/runningin.ogg # Evin
+    #- /Audio/StationEvents/running_out.ogg
+    #- /Audio/StationEvents/countdown.ogg
+    #- /Audio/StationEvents/clearly_nuclear.ogg
+    #- /Audio/Corvax/StationEvents/level.ogg # Corvax-NukeMusic
